--- a/assets/css/colors.css
+++ b/assets/css/colors.css
@@ -64,6 +64,13 @@
     transform: scale(1.7);
 }
 
+.zoom_2{
+    transition: transform .6s;
+}
+.zoom_2:hover{
+    transform: scale(1.3);
+}
+
 .lettres{
     color: #980848;
 }
@@ -74,7 +81,10 @@
 
 .bienvenue_desktop{
     color: #980848;
-    font-size: 4rem;
+    font-size: 5rem;
+    background-color: white;
+    border-radius: 2rem 2rem;
+    border: 0.2rem solid black;
 }
 
 .bienvenue_mobile{
@@ -167,6 +177,11 @@ li {
     border: none;
 }
 
+.bouton_mini{
+    width: auto;
+    height: 2.5rem;
+}
+
 .panneaux{
     width: 90%; height: 4rem;
     background-color: #980848;
@@ -234,7 +249,17 @@ p{color: black;}
     margin-bottom: 2rem;
 }
 
-
+.promo{
+    width: 15rem;
+    height: 15rem;
+    background-color: white;
+    border-radius: 50%;
+    color: #980848;
+    font-size: 6rem;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
 
 
 /*NEON*/
