--- a/assets/css/colors.css
+++ b/assets/css/colors.css
@@ -34,6 +34,14 @@
     border-radius: 25%;
 }
 
+.navbar-nav{
+    background-color: white;
+    border: solid #980848;
+    padding-left: 2rem;
+    padding-right: 2rem;
+    border-radius: 0.5rem 0.5rem;
+}
+
 .hamburger.navbar-toggler-icon{
     background-image: url("data:image/svg+xml;charset=utf8,%3Csvg viewBox='0 0 32 32' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath stroke='rgba(152,8,72,0.8)' stroke-width='2' stroke-linecap='round' stroke-miterlimit='10' d='M4 8h24M4 16h24M4 24h24'/%3E%3C/svg%3E");
 }
@@ -77,6 +85,12 @@
 
 .lettres_blanches{
     color: white;
+}
+
+.fond_intitule{
+    background-color: white;
+    border: solid black;
+    border-radius: 0.5rem 0.5rem;
 }
 
 .bordures_bienvenue{
