--- a/assets/css/colors.css
+++ b/assets/css/colors.css
@@ -34,7 +34,7 @@
     border-radius: 25%;
 }
 
-.navbar-nav{
+navbar-nav{
     background-color: white;
     border: solid #980848;
     padding-left: 2rem;
@@ -93,7 +93,7 @@
     border-radius: 0.5rem 0.5rem;
 }
 
-.bordures_bienvenue{
+bordures_bienvenue{
     background-color: white;
     border-radius: 2rem 2rem;
     border: 0.2rem solid black;
